--- a/MINISTAR/DS_MINISTAR/DS_MINISTAR.vcxproj.filters
+++ b/MINISTAR/DS_MINISTAR/DS_MINISTAR.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="DS6-2016180015-김지호-초기코드.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DS8-2016180015-김지호-초기코드.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DS4-2016180015-김지호-초기코드.h">
